Enable double-tap-and-drag-to-resize.

--- a/macbook/etc/X11/xorg.conf.d/50-synaptics.conf
+++ b/macbook/etc/X11/xorg.conf.d/50-synaptics.conf
@@ -36,7 +36,7 @@ Section "InputClass"
 	Option "FingerPress" "255"
 
 	# Tapping Detection
-	Option "MaxTapTime" "0"             # 0 disables tap
+	Option "MaxTapTime" "80"             # 0 disables tap
 	Option "MaxTapMove" "29"
 	Option "MaxDoubleTapTime" "180"
 	Option "SingleTapTimeout" "180"
@@ -45,7 +45,7 @@ Section "InputClass"
 
 	# Tapping as Buttons (number of fingers)
 	Option "TapButton1" "1"
-	Option "TapButton2" "1"   # Normal click to prevent accidental pastes everywhere
+	Option "TapButton2" "3"   # Normal click to prevent accidental pastes everywhere
 	Option "TapButton3" "1"   # Normal click to prevent accidental pastes everywhere
 
 	# Tap Dragging
@@ -53,7 +53,7 @@ Section "InputClass"
 	Option "LockedDragTimeout" "5000"
 
 	# Tap Gesture Dragging
-	Option "TapAndDragGesture" "0"
+	Option "TapAndDragGesture" "1"   # Set to 1 to enable two-finger-tap-and-resize
 
 	# Corner Tap Buttons
 	Option "RTCornerButton" "0"
