--- a/etc/pacman.conf
+++ b/etc/pacman.conf
@@ -15,41 +15,35 @@
 #LogFile     = /var/log/pacman.log
 #GPGDir      = /etc/pacman.d/gnupg/
 HoldPkg     = pacman glibc
-# If upgrades are available for these packages they will be asked for first
-SyncFirst   = pacman yaourt package-query
 #XferCommand = /usr/bin/curl -C - -f %u > %o
 #XferCommand = /usr/bin/wget --passive-ftp -c -O %o %u
 #CleanMethod = KeepInstalled
+#UseDelta    = 0.7
 Architecture = auto
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
-# boost, boost-libs - Every boost update breaks ROS.
-# avr-gcc, avr-libc - For AVR stuff, particularly Arduino, sometimes, you know.
-IgnorePkg   = boost boost-libs avr-gcc avr-libc
-IgnoreGroup =
+#IgnorePkg   =
+#IgnoreGroup =
 
 #NoUpgrade   =
 #NoExtract   =
 
 # Misc options
 #UseSyslog
-#UseDelta
+#Color
 #TotalDownload
 CheckSpace
 #VerbosePkgLists
 
-# PGP signature checking
-# NOTE: None of this will work without running `pacman-key --init` first.
-# The compiled in default is equivalent to the following line. This requires
-# you to locally sign and trust packager keys using `pacman-key` for them to be
-# considered valid.
-#SigLevel = Optional TrustedOnly
-# If you wish to check signatures but avoid local sign and trust issues, use
-# the following line. This will treat any key imported into pacman's keyring as
-# trusted.
-SigLevel = Optional TrustAll
-# For now, off by default unless you read the above.
-#SigLevel = Never
+# By default, pacman accepts packages signed by keys that its local keyring
+# trusts (see pacman-key and its man page), as well as unsigned packages.
+SigLevel    = Required DatabaseOptional
+LocalFileSigLevel = Optional
+#RemoteFileSigLevel = Required
+
+# NOTE: You must run `pacman-key --init` before first using pacman; the local
+# keyring can then be populated with the keys of all official Arch Linux
+# packagers with `pacman-key --populate archlinux`.
 
 #
 # REPOSITORIES
@@ -75,34 +69,27 @@ SigLevel = Optional TrustAll
 # after the header, and they will be used before the default mirrors.
 
 #[testing]
-#SigLevel = PackageRequired
 #Include = /etc/pacman.d/mirrorlist
 
 [core]
-#SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
 
 [extra]
-#SigLevel = PackageOptional
 Include = /etc/pacman.d/mirrorlist
 
 #[community-testing]
-#SigLevel = PackageRequired
 #Include = /etc/pacman.d/mirrorlist
 
 [community]
-#SigLevel = PackageOptional
 Include = /etc/pacman.d/mirrorlist
 
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
 
 #[multilib-testing]
-#SigLevel = PackageRequired
 #Include = /etc/pacman.d/mirrorlist
 
 [multilib]
-#SigLevel = PackageOptional
 Include = /etc/pacman.d/mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
@@ -112,11 +99,5 @@ Include = /etc/pacman.d/mirrorlist
 #Server = file:///home/custompkgs
 
 [archlinuxfr]
-Server = http://repo.archlinux.fr/x86_64
-
-#[kdemod-core]
-#Server = http://chakra-project.org/repo/kdemod-core/x86_64
-
-#[kdemod-extragear]
-#Server = http://chakra-project.org/repo/kdemod-extragear/x86_64
-
+SigLevel = Never
+Server = http://repo.archlinux.fr/$arch
