Update from new laptop.

--- a/etc/X11/xorg.conf
+++ b/etc/X11/xorg.conf
@@ -1,22 +1,21 @@
-Section "ServerFlags"
-    Option      "AutoAddDevices"    "True"
-EndSection
-
 Section "ServerLayout"
 	Identifier     "X.org Configured"
 	Screen      0  "Screen0" 0 0
-    InputDevice    "Keyboard0"  "CoreKeyboard"
-#    InputDevice     "touchpad catchall" "SendCoreEvents"
-#    InputDevice     "Mouse0"
-
-    Option          "StandbyTime" "600"
-    Option          "SuspendTime" "600"
-    Option          "OffTime" "600"
-    Option          "BlankTime" "600"
+	Screen      1  "Screen1" RightOf "Screen0"
+	Screen      2  "Screen2" RightOf "Screen1"
+	Screen      3  "Screen3" RightOf "Screen2"
+	Screen      4  "Screen4" RightOf "Screen3"
+	Screen      5  "Screen5" RightOf "Screen4"
+	Screen      6  "Screen6" RightOf "Screen5"
+	Screen      7  "Screen7" RightOf "Screen6"
+	Screen      8  "Screen8" RightOf "Screen7"
+	Screen      9  "Screen9" RightOf "Screen8"
+	InputDevice    "Mouse0" "CorePointer"
+	InputDevice    "Keyboard0" "CoreKeyboard"
 EndSection
 
 Section "Files"
-#    FontPath     "/usr/org/modules"
+	ModulePath   "/usr/lib/xorg/modules"
 	FontPath     "/usr/share/fonts/misc/"
 	FontPath     "/usr/share/fonts/TTF/"
 	FontPath     "/usr/share/fonts/OTF/"
@@ -26,103 +25,552 @@ Section "Files"
 EndSection
 
 Section "Module"
-    Load  "record"
-    Load  "dbe"
-    Load  "dri"
-    Load  "glx"
-    Load  "dri2"
-    Load  "extmod"
-    Load  "synaptics"
+	Load  "glx"
 EndSection
 
 Section "InputDevice"
 	Identifier  "Keyboard0"
 	Driver      "kbd"
-    Option      "CoreKeyboard"
-    Option      "XkbRules"      "xorg"
-    Option      "XkbModel"      "pc105"
-    Option      "XkbLayout"     "colemak"
 EndSection
 
-#Section "InputDevice"
-#    Identifier  "Mouse0"
-#    Driver      "mouse"
-#    Option      "Protocol"      "auto"
-#    Option      "Device"        "/dev/input/mice"
-#EndSection
-
-
+Section "InputDevice"
+	Identifier  "Mouse0"
+	Driver      "mouse"
+	Option	    "Protocol" "auto"
+	Option	    "Device" "/dev/input/mice"
+	Option	    "ZAxisMapping" "4 5 6 7"
+EndSection
 
 Section "Monitor"
 	Identifier   "Monitor0"
 	VendorName   "Monitor Vendor"
 	ModelName    "Monitor Model"
-    HorizSync    30.0 - 130.0
-    VertRefresh  50.0 - 100.0
+EndSection
+
+Section "Monitor"
+	Identifier   "Monitor1"
+	VendorName   "Monitor Vendor"
+	ModelName    "Monitor Model"
+EndSection
+
+Section "Monitor"
+	Identifier   "Monitor2"
+	VendorName   "Monitor Vendor"
+	ModelName    "Monitor Model"
+EndSection
+
+Section "Monitor"
+	Identifier   "Monitor3"
+	VendorName   "Monitor Vendor"
+	ModelName    "Monitor Model"
+EndSection
+
+Section "Monitor"
+	Identifier   "Monitor4"
+	VendorName   "Monitor Vendor"
+	ModelName    "Monitor Model"
+EndSection
+
+Section "Monitor"
+	Identifier   "Monitor5"
+	VendorName   "Monitor Vendor"
+	ModelName    "Monitor Model"
+EndSection
+
+Section "Monitor"
+	Identifier   "Monitor6"
+	VendorName   "Monitor Vendor"
+	ModelName    "Monitor Model"
+EndSection
+
+Section "Monitor"
+	Identifier   "Monitor7"
+	VendorName   "Monitor Vendor"
+	ModelName    "Monitor Model"
+EndSection
+
+Section "Monitor"
+	Identifier   "Monitor8"
+	VendorName   "Monitor Vendor"
+	ModelName    "Monitor Model"
+EndSection
+
+Section "Monitor"
+	Identifier   "Monitor9"
+	VendorName   "Monitor Vendor"
+	ModelName    "Monitor Model"
 EndSection
 
 Section "Device"
         ### Available Driver options are:-
         ### Values: <i>: integer, <f>: float, <bool>: "True"/"False",
-        ### <string>: "String", <freq>: "<f> Hz/kHz/MHz"
+        ### <string>: "String", <freq>: "<f> Hz/kHz/MHz",
+        ### <percent>: "<f>%"
+        ### [arg]: arg optional
+        #Option     "SWcursor"           	# [<bool>]
+        #Option     "HWcursor"           	# [<bool>]
+        #Option     "NoAccel"            	# [<bool>]
+        #Option     "ShadowFB"           	# [<bool>]
+        #Option     "UseFBDev"           	# [<bool>]
+        #Option     "Rotate"             	# [<str>]
+        #Option     "VideoKey"           	# <i>
+        #Option     "FlatPanel"          	# [<bool>]
+        #Option     "FPDither"           	# [<bool>]
+        #Option     "CrtcNumber"         	# <i>
+        #Option     "FPScale"            	# [<bool>]
+        #Option     "FPTweak"            	# <i>
+        #Option     "DualHead"           	# [<bool>]
+	Identifier  "Card0"
+	Driver      "nv"
+	BusID       "PCI:1:0:0"
+EndSection
+
+Section "Device"
+        ### Available Driver options are:-
+        ### Values: <i>: integer, <f>: float, <bool>: "True"/"False",
+        ### <string>: "String", <freq>: "<f> Hz/kHz/MHz",
+        ### <percent>: "<f>%"
+        ### [arg]: arg optional
+        #Option     "SWcursor"           	# [<bool>]
+        #Option     "kmsdev"             	# <str>
+        #Option     "ShadowFB"           	# [<bool>]
+	Identifier  "Card1"
+	Driver      "modesetting"
+	BusID       "PCI:0:2:0"
+EndSection
+
+Section "Device"
+        ### Available Driver options are:-
+        ### Values: <i>: integer, <f>: float, <bool>: "True"/"False",
+        ### <string>: "String", <freq>: "<f> Hz/kHz/MHz",
+        ### <percent>: "<f>%"
+        ### [arg]: arg optional
+        #Option     "SWcursor"           	# [<bool>]
+        #Option     "kmsdev"             	# <str>
+        #Option     "ShadowFB"           	# [<bool>]
+	Identifier  "Card2"
+	Driver      "modesetting"
+	BusID       "PCI:1:0:0"
+EndSection
+
+Section "Device"
+        ### Available Driver options are:-
+        ### Values: <i>: integer, <f>: float, <bool>: "True"/"False",
+        ### <string>: "String", <freq>: "<f> Hz/kHz/MHz",
+        ### <percent>: "<f>%"
         ### [arg]: arg optional
         #Option     "NoAccel"            	# [<bool>]
-        #Option     "SWcursor"           	# [<bool>]
+        #Option     "AccelMethod"        	# <str>
+        #Option     "Backlight"          	# <str>
+        #Option     "DRI"                	# <str>
         #Option     "ColorKey"           	# <i>
-        #Option     "CacheLines"         	# <i>
-        #Option     "Dac6Bit"            	# [<bool>]
-        #Option     "DRI"                	# [<bool>]
-        #Option     "NoDDC"              	# [<bool>]
-        #Option     "ShowCache"          	# [<bool>]
-        #Option     "XvMCSurfaces"       	# <i>
-        #Option     "PageFlip"           	# [<bool>]
-	Identifier  "Card0"
+        #Option     "VideoKey"           	# <i>
+        #Option     "Tiling"             	# [<bool>]
+        #Option     "LinearFramebuffer"  	# [<bool>]
+        #Option     "SwapbuffersWait"    	# [<bool>]
+        #Option     "TripleBuffer"       	# [<bool>]
+        #Option     "XvPreferOverlay"    	# [<bool>]
+        #Option     "HotPlug"            	# [<bool>]
+        #Option     "RelaxedFencing"     	# [<bool>]
+        #Option     "XvMC"               	# [<bool>]
+        #Option     "ZaphodHeads"        	# <str>
+        #Option     "TearFree"           	# [<bool>]
+        #Option     "PerCrtcPixmaps"     	# [<bool>]
+        #Option     "FallbackDebug"      	# [<bool>]
+        #Option     "DebugFlushBatches"  	# [<bool>]
+        #Option     "DebugFlushCaches"   	# [<bool>]
+        #Option     "DebugWait"          	# [<bool>]
+        #Option     "BufferCache"        	# [<bool>]
+	Identifier  "Card3"
 	Driver      "intel"
-	VendorName  "Intel Corporation"
-	BoardName   "Mobile 945GM/GMS, 943/940GML Express Integrated Graphics Controller"
 	BusID       "PCI:0:2:0"
-    Option      "Shadow"        "True"
-    Option      "DRI"           "False"   # Prevent OpenGL from crashing X.
+EndSection
+
+Section "Device"
+	Identifier  "Card4"
+	Driver      "nvidia"
+	BusID       "PCI:1:0:0"
+EndSection
+
+Section "Device"
+        ### Available Driver options are:-
+        ### Values: <i>: integer, <f>: float, <bool>: "True"/"False",
+        ### <string>: "String", <freq>: "<f> Hz/kHz/MHz",
+        ### <percent>: "<f>%"
+        ### [arg]: arg optional
+        #Option     "SWcursor"           	# [<bool>]
+        #Option     "HWcursor"           	# [<bool>]
+        #Option     "NoAccel"            	# [<bool>]
+        #Option     "ShadowFB"           	# [<bool>]
+        #Option     "UseFBDev"           	# [<bool>]
+        #Option     "Rotate"             	# [<str>]
+        #Option     "VideoKey"           	# <i>
+        #Option     "FlatPanel"          	# [<bool>]
+        #Option     "FPDither"           	# [<bool>]
+        #Option     "CrtcNumber"         	# <i>
+        #Option     "FPScale"            	# [<bool>]
+        #Option     "FPTweak"            	# <i>
+        #Option     "DualHead"           	# [<bool>]
+	Identifier  "Card5"
+	Driver      "nv"
+	BusID       "PCI:1:0:0"
+EndSection
+
+Section "Device"
+        ### Available Driver options are:-
+        ### Values: <i>: integer, <f>: float, <bool>: "True"/"False",
+        ### <string>: "String", <freq>: "<f> Hz/kHz/MHz",
+        ### <percent>: "<f>%"
+        ### [arg]: arg optional
+        #Option     "ShadowFB"           	# [<bool>]
+        #Option     "Rotate"             	# <str>
+        #Option     "fbdev"              	# <str>
+        #Option     "debug"              	# [<bool>]
+	Identifier  "Card6"
+	Driver      "fbdev"
+	BusID       "PCI:0:2:0"
+EndSection
+
+Section "Device"
+        ### Available Driver options are:-
+        ### Values: <i>: integer, <f>: float, <bool>: "True"/"False",
+        ### <string>: "String", <freq>: "<f> Hz/kHz/MHz",
+        ### <percent>: "<f>%"
+        ### [arg]: arg optional
+        #Option     "ShadowFB"           	# [<bool>]
+        #Option     "Rotate"             	# <str>
+        #Option     "fbdev"              	# <str>
+        #Option     "debug"              	# [<bool>]
+	Identifier  "Card7"
+	Driver      "fbdev"
+	BusID       "PCI:1:0:0"
+EndSection
+
+Section "Device"
+        ### Available Driver options are:-
+        ### Values: <i>: integer, <f>: float, <bool>: "True"/"False",
+        ### <string>: "String", <freq>: "<f> Hz/kHz/MHz",
+        ### <percent>: "<f>%"
+        ### [arg]: arg optional
+        #Option     "ShadowFB"           	# [<bool>]
+        #Option     "DefaultRefresh"     	# [<bool>]
+        #Option     "ModeSetClearScreen" 	# [<bool>]
+	Identifier  "Card8"
+	Driver      "vesa"
+	BusID       "PCI:0:2:0"
+EndSection
+
+Section "Device"
+        ### Available Driver options are:-
+        ### Values: <i>: integer, <f>: float, <bool>: "True"/"False",
+        ### <string>: "String", <freq>: "<f> Hz/kHz/MHz",
+        ### <percent>: "<f>%"
+        ### [arg]: arg optional
+        #Option     "ShadowFB"           	# [<bool>]
+        #Option     "DefaultRefresh"     	# [<bool>]
+        #Option     "ModeSetClearScreen" 	# [<bool>]
+	Identifier  "Card9"
+	Driver      "vesa"
+	BusID       "PCI:1:0:0"
 EndSection
 
 Section "Screen"
-    Identifier "Screen0"
-    Device     "Card0"
-    Monitor    "Monitor0"
-    DefaultDepth    24
-    SubSection "Display"
-        Modes        "1280x800"
-    EndSubSection
+	Identifier "Screen0"
+	Device     "Card0"
+	Monitor    "Monitor0"
+	SubSection "Display"
+		Viewport   0 0
+		Depth     1
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     4
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     8
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     15
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     16
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     24
+	EndSubSection
 EndSection
 
+Section "Screen"
+	Identifier "Screen1"
+	Device     "Card1"
+	Monitor    "Monitor1"
+	SubSection "Display"
+		Viewport   0 0
+		Depth     1
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     4
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     8
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     15
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     16
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     24
+	EndSubSection
+EndSection
 
-#Section "Screen"
-#	Identifier "Screen0"
-#	Device     "Card0"
-#	Monitor    "Monitor0"
-#	SubSection "Display"
-#		Viewport   0 0
-#		Depth     1
-#	EndSubSection
-#	SubSection "Display"
-#		Viewport   0 0
-#		Depth     4
-#	EndSubSection
-#	SubSection "Display"
-#		Viewport   0 0
-#		Depth     8
-#	EndSubSection
-#	SubSection "Display"
-#		Viewport   0 0
-#		Depth     15
-#	EndSubSection
-#	SubSection "Display"
-#		Viewport   0 0
-#		Depth     16
-#	EndSubSection
-#	SubSection "Display"
-#		Viewport   0 0
-#		Depth     24
-#	EndSubSection
-#EndSection
+Section "Screen"
+	Identifier "Screen2"
+	Device     "Card2"
+	Monitor    "Monitor2"
+	SubSection "Display"
+		Viewport   0 0
+		Depth     1
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     4
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     8
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     15
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     16
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     24
+	EndSubSection
+EndSection
+
+Section "Screen"
+	Identifier "Screen3"
+	Device     "Card3"
+	Monitor    "Monitor3"
+	SubSection "Display"
+		Viewport   0 0
+		Depth     1
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     4
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     8
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     15
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     16
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     24
+	EndSubSection
+EndSection
+
+Section "Screen"
+	Identifier "Screen4"
+	Device     "Card4"
+	Monitor    "Monitor4"
+	SubSection "Display"
+		Viewport   0 0
+		Depth     1
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     4
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     8
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     15
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     16
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     24
+	EndSubSection
+EndSection
+
+Section "Screen"
+	Identifier "Screen5"
+	Device     "Card5"
+	Monitor    "Monitor5"
+	SubSection "Display"
+		Viewport   0 0
+		Depth     1
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     4
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     8
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     15
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     16
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     24
+	EndSubSection
+EndSection
+
+Section "Screen"
+	Identifier "Screen6"
+	Device     "Card6"
+	Monitor    "Monitor6"
+	SubSection "Display"
+		Viewport   0 0
+		Depth     1
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     4
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     8
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     15
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     16
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     24
+	EndSubSection
+EndSection
+
+Section "Screen"
+	Identifier "Screen7"
+	Device     "Card7"
+	Monitor    "Monitor7"
+	SubSection "Display"
+		Viewport   0 0
+		Depth     1
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     4
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     8
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     15
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     16
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     24
+	EndSubSection
+EndSection
+
+Section "Screen"
+	Identifier "Screen8"
+	Device     "Card8"
+	Monitor    "Monitor8"
+	SubSection "Display"
+		Viewport   0 0
+		Depth     1
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     4
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     8
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     15
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     16
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     24
+	EndSubSection
+EndSection
+
+Section "Screen"
+	Identifier "Screen9"
+	Device     "Card9"
+	Monitor    "Monitor9"
+	SubSection "Display"
+		Viewport   0 0
+		Depth     1
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     4
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     8
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     15
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     16
+	EndSubSection
+	SubSection "Display"
+		Viewport   0 0
+		Depth     24
+	EndSubSection
+EndSection
 
