--- a/etc/X11/xorg.conf.d/50-synaptics.conf
+++ b/etc/X11/xorg.conf.d/50-synaptics.conf
@@ -14,7 +14,7 @@ Section "InputClass"
 # This option is recommend on all Linux systems using evdev, but cannot be
 # enabled by default. See the following link for details:
 # http://who-t.blogspot.com/2010/11/how-to-ignore-configuration-errors.html
-	#MatchDevicePath "/dev/input/event*"
+	MatchDevicePath "/dev/input/event*"
 
 	# Enable touchpad
 	Option "TouchpadOff"        "0"
@@ -26,13 +26,13 @@ Section "InputClass"
 	#Option "BottomEdge" "4752"
 
 	# Speed
-	Option "MinSpeed" "0.4"
-	Option "MaxSpeed" "0.7"
+	Option "MinSpeed" "0.2"
+	Option "MaxSpeed" "0.5"
 	Option "AccelFactor" "0.06"
 
 	# Pressure
-	Option "FingerLow" "24"
-	Option "FingerHigh" "29"
+	Option "FingerLow" "16"
+	Option "FingerHigh" "20"
 	Option "FingerPress" "255"
 
 	# Tapping Detection
@@ -112,9 +112,9 @@ Section "InputClass"
 	Option "PressureMotionMaxFactor" "1"
 
 	# Emulations
-	Option "EmulateMidButtonTime" "75"
-	Option "EmulateTwoFingerMinZ" "280"
-	Option "EmulateTwoFingerMinW" "7"
+	#Option "EmulateMidButtonTime" "75"
+	#Option "EmulateTwoFingerMinZ" "280"
+	#Option "EmulateTwoFingerMinW" "7"
 
 	# Palm Detection
 	Option "PalmDetect" "0"
