--- a/etc/X11/xorg.conf.d/10-evdev.conf
+++ b/etc/X11/xorg.conf.d/10-evdev.conf
@@ -1,36 +1,40 @@
-Section  "InputClass"
-	Identifier "evdev pointer catchall"
-	MatchIsPointer "on"
-	MatchDevIcePath "/dev/input/event*"
-	Driver "evdev"
+#
+# Catch-all evdev loader for udev-based systems
+# We don't simply match on any device since that also adds accelerometers
+# and other devices that we don't really want to use. The list below
+# matches everything but joysticks.
+
+Section "InputClass"
+        Identifier "evdev pointer catchall"
+        MatchIsPointer "on"
+        MatchDevicePath "/dev/input/event*"
+        Driver "evdev"
 EndSection
-Section  "InputClass"
-	Identifier "evdev keyboard catchall"
-	MatchIsKeyboard "on"
-	MatchDevIcePath "/dev/input/event*"
-	Driver "evdev"
+
+Section "InputClass"
+        Identifier "evdev keyboard catchall"
+        MatchIsKeyboard "on"
+        MatchDevicePath "/dev/input/event*"
+        Driver "evdev"
 EndSection
-#Section  "InputClass"
-#	Identifier "evdev touchpad catchall"
-#	MatchIsTouchpad "on"
-#	MatchDevIcePath "/dev/input/event*"
-#	Driver "evdev"
+
+#Section "InputClass"
+#        Identifier "evdev touchpad catchall"
+#        MatchIsTouchpad "on"
+#        MatchDevicePath "/dev/input/event*"
+#        Driver "evdev"
 #EndSection
-Section  "InputClass"
-	Identifier "evdev tablet catchall"
-	MatchIsTablet "on"
-	MatchDevIcePath "/dev/input/event*"
-	Driver "evdev"
+
+Section "InputClass"
+        Identifier "evdev tablet catchall"
+        MatchIsTablet "on"
+        MatchDevicePath "/dev/input/event*"
+        Driver "evdev"
 EndSection
-Section  "InputClass"
-	Identifier "evdev touchscreen catchall"
-	MatchIsTouchscreen "on"
-	MatchDevIcePath "/dev/input/event*"
-	Driver "evdev"
-EndSection
-Section  "InputClass"
-	Identifier "Keyboard Defaults"
-	MatchIsKeyboard "yes"
-	Option "XkbdOptions" "terminate:ctrl_alt_bksp"
-	Option "XkbLayout" "colemak"
+
+Section "InputClass"
+        Identifier "evdev touchscreen catchall"
+        MatchIsTouchscreen "on"
+        MatchDevicePath "/dev/input/event*"
+        Driver "evdev"
 EndSection
