--- a/etc/X11/xorg.conf.d/50-joystick.conf
+++ b/etc/X11/xorg.conf.d/50-joystick.conf
@@ -1,6 +1,6 @@
-#Section "InputClass"
-#	Identifier "joystick catchall"
-#	MatchIsJoystick "on"
-#	MatchDevicePath "/dev/input/event*"
-#	Driver "joystick"
-#EndSection
+Section "InputClass"
+	Identifier "joystick catchall"
+	MatchIsJoystick "on"
+	MatchDevicePath "/dev/input/event*"
+	Driver "joystick"
+EndSection
